--- a/src/app/playlist/playlist.page.html
+++ b/src/app/playlist/playlist.page.html
@@ -12,6 +12,7 @@
   <div class="search">
     <ion-input placeholder="Search..." (ionFocus)="searching()" #input [(ngModel)]="searchFilter" (keyup)="filterSearch($event)"  [class.active-search]="search" [class.inactive-search]="!search">
       <ion-icon name="search"> </ion-icon>
+      <ion-icon name="close-outline" class="inp" [ngClass]="{'visible-btn':search,'hidden-btn':!search}"></ion-icon>
     </ion-input>
     <ion-button fill="clear" color="primary" size="small" (click)="searching()" [ngClass]="{'visible-btn':search,'hidden-btn':!search}">Cancel</ion-button>
   </div>
