--- a/src/app/playlist/playlist.page.scss
+++ b/src/app/playlist/playlist.page.scss
@@ -11,6 +11,10 @@
     ion-icon{
         margin-left: 10px;
     }
+    .inp{
+        position: absolute;
+        margin-right:5%;
+    }
 }
 
 .inactive-search{
@@ -29,7 +33,7 @@
 .hidden-btn{
     position: absolute;
     top: 5px;
-    right: -50px;
+    right: -100px;
     transition: 0.4s;
 }
 
@@ -40,10 +44,10 @@
     transition: 0.4s;
 }
 
-.search-overlay{
+/* .search-overlay{
     width: 100%;
     height: 100%;
     background: #0000003d;
     position: absolute;
     opacity: 0;
-}
+} */
