--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -6,3 +6,96 @@
     <h2>{{item.title}}</h2>
   </ion-label>
 </ion-item>
+
+
+<!-- <ion-header>
+  <ion-toolbar>
+    <ion-title>
+      Video Example
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+    <div class="video-list" no-padding mode="md">
+        <div class="imagediv" [ngStyle]="{'background-image' :'url(http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/images/BigBuckBunny.jpg)'}" (click)="playVideoLocal()">
+          <div class="inner">
+            <b>4.49</b>
+          </div>
+        </div>
+        <div class="details">
+          <div class="avatar">
+            <img src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/images/BigBuckBunny.jpg" />
+          </div>
+          <div class="title-block">
+            <div class="title">This Video is in Local</div>
+            <div class="extra">
+              <div class="author">Marvel</div>
+              <div class="dot"></div>
+              <div class="views">50 views</div>
+              <div class="dot"></div>
+              <div class="date">2 months ago</div>
+            </div>
+          </div>
+        </div>
+        <div class="imagediv" [ngStyle]="{'background-image' :'url(http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/images/BigBuckBunny.jpg)'}" (click)="playVideoHosted()">
+          <div class="inner">
+            <b>4.49</b>
+          </div>
+        </div>
+        <div class="details">
+          <div class="avatar">
+            <img src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/images/BigBuckBunny.jpg" />
+          </div>
+          <div class="title-block">
+            <div class="title">This Video is hosted on server</div>
+            <div class="extra">
+              <div class="author">Buck Bunny</div>
+              <div class="dot"></div>
+              <div class="views">50 views</div>
+              <div class="dot"></div>
+              <div class="date">2 months ago</div>
+            </div>
+          </div>
+        </div>
+   
+      <div class="imagediv" [ngStyle]="{'background-image' :'url(https://techcrunch.com/wp-content/uploads/2018/12/Screen-Shot-2018-12-19-at-4.16.05-PM.png?w=1704&h=928&crop=1)'}" (click)="viewVideo()">
+        <div class="inner">
+          <b>4.49</b>
+        </div>
+      </div>
+      <div class="details">
+        <div class="avatar">
+          <img src="https://techcrunch.com/wp-content/uploads/2018/12/Screen-Shot-2018-12-19-at-4.16.05-PM.png?w=1704&h=928&crop=1" />
+        </div>
+        <div class="title-block">
+          <div class="title">This Video is hosted on youtube</div>
+          <div class="extra">
+            <div class="author">Elon Musk</div>
+            <div class="dot"></div>
+            <div class="views">50 views</div>
+            <div class="dot"></div>
+            <div class="date">2 months ago</div>
+          </div>
+        </div>
+      </div>
+      
+    </div>
+    
+</ion-content> -->
+
+
+
+view
+<!-- 
+<ion-content>
+  <ion-buttons  (click)="dismiss()" float-right padding-top padding-end>
+      <ion-icon slot="icon-only" name="close" color="light"></ion-icon>
+  </ion-buttons>
+
+<ion-row class="ion-align-items-center rowSection">
+  <iframe [src]="sanitizer.bypassSecurityTrustResourceUrl(videourl)" allow="autoplay;" frameborder="0"
+  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</ion-row>
+
+</ion-content> -->
